infrastructure/kustomize/overlays/test-run/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catarse
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: catarse
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "catarse"
              servicePort: 3000
